--- a/compose.yaml
+++ b/compose.yaml
@@ -3,3 +3,14 @@ services:
     build: .
     ports:
       - '8080:3000'
+  db:
+    image: postgres
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+    volumes:
+      - ./db:/var/lib/postgresql/data
+    command: postgres -c fsync=off -c full_page_writes=off
