--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
+    "@prisma/client": "^4.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -44,6 +46,7 @@
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "prisma": "^4.9.0",
+    "prisma-erd-generator": "^1.2.5",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
